5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1595_2895.log
== TEST (2019-03-26 16:33:47) 
-- CODE:
i
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:33:55) 
-- CODE:
i
-- EXECUTION TIME:
0.162693
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 1, in <module>
    i
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:40:21) 
-- CODE:
var = input("Instruções:")
print(float(int))
-- EXECUTION TIME:
0.139403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:22) 
-- CODE:
var = input("Instruções:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:15) 
-- CODE:
var = input("Instruções:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:31) 
-- CODE:
var = input("Instruçoes:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:39) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:41:42) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- EXECUTION TIME:
0.159978
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:42) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:41:53) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- EXECUTION TIME:
0.151842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:57) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:00) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:42:01) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- EXECUTION TIME:
0.130407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:04) 
-- CODE:
var = input("Instrucoes:")
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:37) 
-- CODE:
var = int(input("Instrucoes:"))
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:42:39) 
-- CODE:
var = int(input("Instrucoes:"))
print(float(int))
-- EXECUTION TIME:
0.134842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:39) 
-- CODE:
var = int(input("Instrucoes:"))
print(float(int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:56:58) 
-- CODE:
quant= 8
vu=45
frete=45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:45) 
-- CODE:
quant= 8
vu=45
frete=45
total= (8*45+45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:57:48) 
-- CODE:
quant= 8
vu=45
frete=45
total= (8*45+45)
-- EXECUTION TIME:
0.19964
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:57:48) 
-- CODE:
quant= 8
vu=45
frete=45
total= (8*45+45)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:20:07) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(float(int))
TypeError: float() argument must be a string or a number, not 'type'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:20:59) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))

print=(a)
print(b)
print=(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(b)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:21:15) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))

print=(a)
print(b)
print=(c)
-- EXECUTION TIME:
0.181228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 6, in <module>
    print(b)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:21:27) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=(a)
print(b)
print=(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(b)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:21:42) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=(a)
print(b)
print=(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(b)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:25) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c
-- EXECUTION TIME:
0.193782
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:25) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c
-- EXECUTION TIME:
0.127512
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:26) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:32) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- EXECUTION TIME:
0.126169
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:33) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- EXECUTION TIME:
0.117574
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:33) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:34) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- EXECUTION TIME:
0.123864
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:34) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:35) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:22:48) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- EXECUTION TIME:
0.168646
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:22:58) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:23:12) 
-- CODE:
a=int(input("qual a quantidade de jogos:"))
b=float(input("qual o valor do jogo?:"))
c=float(input("o valor do frete:"))

print=((a*b)+c)
-- EXECUTION TIME:
0.160158
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:24:05) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- EXECUTION TIME:
0.161514
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:24:07) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- EXECUTION TIME:
0.14933
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:24:07) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:24:09) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:24:10) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- EXECUTION TIME:
0.122379
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:24:11) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:25:06) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print=((a*b)+c)
-- EXECUTION TIME:
0.146811
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:25:17) 
-- CODE:
a=int(input("qual a quantidade de jogos"))
b=float(input("qual o valor do jogo?"))
c=float(input("o valor do frete"))
print((a*b)+c)
-- EXECUTION TIME:
0.164419
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
